# digital-blasphemy-client-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  semgrep.yml
resources/: download_wallpaper_bad_request.json  download_wallpaper_success_minimal_populated.json  get_user_information_success.json  get_wallpaper_bad_request.json  get_wallpaper_success_fully_populated.json  get_wallpaper_success_minimal_populated.json  get_wallpapers_bad_request.json  get_wallpapers_success.json  get_wallpapers_success_fully_populated.json  get_wallpapers_success_minimal_populated.json  unauthorised_response.json
src/: lib.rs
src/model/: common.rs  common_response.rs  download_wallpaper.rs  error.rs  get_account_information.rs  get_wallpaper.rs  get_wallpapers.rs  mod.rs  wallpaper.rs
