[package]
name = "digital_blasphemy_client"
version = "0.1.2"
edition = "2024"
description = "A client for the Digital Blasphemy API"
license = "Apache-2.0"
homepage = "https://github.com/gigaSproule/digital-blasphemy-client-rs"
repository = "https://github.com/gigaSproule/digital-blasphemy-client-rs"
readme = "README.md"
keywords = ["digital", "blasphemy"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
log = "0.4.27"
