[package]
name = "digital_blasphemy_client"
version = "0.1.3-alpha"
edition = "2024"
description = "A client for the Digital Blasphemy API"
license = "Apache-2.0"
homepage = "https://github.com/gigaSproule/digital-blasphemy-client-rs"
repository = "https://github.com/gigaSproule/digital-blasphemy-client-rs"
readme = "README.md"
keywords = ["digital", "blasphemy"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
log = "0.4.27"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.46.1", features = ["rt", "macros"] }
uuid = { version = "1.17.0", features = ["v4"] }
