[package]
name = "digital_blasphemy_client"
version = "0.1.6-alpha"
edition = "2024"
description = "A client for the Digital Blasphemy API"
license = "Apache-2.0"
homepage = "https://github.com/gigaSproule/digital-blasphemy-client-rs"
repository = "https://github.com/gigaSproule/digital-blasphemy-client-rs"
readme = "README.md"
keywords = ["digital", "blasphemy"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
log = "0.4.28"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }
